[workspace]
members = [
	"runtime",
	# "node",
	"pallets/aleph",
	"pallets/aleph/aleph-runtime-api",
	"pallets/committee-management",
	"pallets/elections",
	"pallets/custom-signatures",
	"pallets/dynamic-evm-base-fee",
	"crate/finality-aleph",
	"crate/chain-bootstrapper",
	"crate/runtime-interfaces",
]

exclude = [
    "crate/finalizer",
	"crate/fork-off",
	"crate/selendra-client"
]

resolver = "2"

[workspace.package]
authors = ["Selendra"]
edition = "2021"
repository = "https://github.com/selendra/selendra"

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[workspace.dependencies]
aleph-bft-crypto = { version = "0.9" }
aleph-bft-mock = { version = "0.15" }
aleph-bft-rmc = { version = "0.14" }
aleph-bft-types = { version = "0.14" }
async-trait = { version = "0.1" }
array-bytes = { version = "6" }
bytes = { version = "1.8" }
derive_more = { version = "1.0", features = ["from", "into", "as_ref", "display"] }
env_logger = { version = "0.10" }
futures = { version = "0.3" }
futures-timer = { version = "3.0" }
hash-db = { version = "0.16", default-features = false }
hex = { version = "0.4" }
hex-literal = { version = "0.3" }
ink = { version = "5.0.0-rc", default-features = false }
ip_network = { version = "0.4" }
jsonrpsee = { version = "0.16.3" }
libp2p = { version = "0.51" }
log = { version = "0.4", default-features = false }
lru = { version = "0.10" }
parity-scale-codec = { version = "3.6", default-features = false }
parking_lot = { version = "0.12" }
paste = { version = "1.0" }
rand = { version = "0.8.5", default-features = false }
scale-info = { version = "2.11", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
smallvec = { version = "1", default-features = false }
static_assertions = { version = "1.1" }
thiserror = { version = "1.0" }
tiny-bip39 = { version = "1.0" }
tokio = { version = "1.41" }
rand_pcg = { version = "0.3.1", default-features = false }

assert_matches = "1.3.0"
libsecp256k1 = { version = "0.7.1", default-features = false }
num-traits = { version = "0.2.18", default-features = false }
clap = { version = "4.4.12", features = ["derive", "deprecated"] }

# Substrate Client
sc-basic-authorship = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-block-builder = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-chain-spec = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-cli = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sc-client-api = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-client-db = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sc-consensus = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-consensus-aura = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-consensus-slots = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-consensus-manual-seal = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-executor = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-keystore = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-network = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-network-common = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-network-light = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-network-sync = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-network-transactions = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-offchain = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-rpc = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-rpc-api = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-service = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sc-telemetry = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-transaction-pool = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-transaction-pool-api = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sc-utils = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }

# Substrate Primitive
sp-api = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-application-crypto = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-arithmetic = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-block-builder = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-blockchain = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sp-consensus = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sp-consensus-aura = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-consensus-slots = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-core = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-core-hashing = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-core-hashing-proc-macro = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-database = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sp-externalities = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-genesis-builder = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-inherents = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-io = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-keyring = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sp-keystore = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
sp-offchain = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-runtime = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-runtime-interface = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-session = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-staking = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-state-machine = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-std = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-storage = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-timestamp = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-transaction-pool = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-trie = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-version = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
sp-weights = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }

# Substrate FRAME
frame-benchmarking = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
frame-election-provider-support = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
frame-executive = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
frame-support = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
frame-system = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
frame-system-benchmarking = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }

# Substrate Pallet
pallet-aura = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
pallet-authorship = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
pallet-balances = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
pallet-identity = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
pallet-indices = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
pallet-multisig = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
pallet-session = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
pallet-proxy = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
pallet-recovery = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
pallet-staking = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
pallet-staking-runtime-api = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
pallet-sudo = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
pallet-timestamp = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }
pallet-utility = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0", default-features = false }

# Substrate Utility
frame-benchmarking-cli = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
substrate-build-script-utils = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
substrate-frame-rpc-system = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
substrate-test-client = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
substrate-test-runtime = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
substrate-test-runtime-client = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }
substrate-wasm-builder = { git = "https://github.com/selendra/polkadot-sdk", branch = "selendra-1.6.0" }

# Frontier Client
fc-api = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0" }
fc-cli = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
fc-consensus = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0" }
fc-db = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
fc-mapping-sync = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
fc-rpc = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
fc-rpc-core = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0" }
fc-storage = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0" }

# Frontier Primitive
fp-account = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
fp-consensus = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
fp-dynamic-fee = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
fp-ethereum = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
fp-evm = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
fp-rpc = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
fp-self-contained = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
fp-storage = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }

# Frontier FRAME
pallet-base-fee = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
pallet-ethereum = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
pallet-evm = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
pallet-evm-test-vector-support = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0" }
pallet-hotfix-sufficients = { git = "https://github.com/selendra/frontier", branch = "selendra-1.6.0", default-features = false }
pallet-custom-signatures = { path = "pallets/custom-signatures", default-features = false }
pallet-dynamic-evm-base-fee = { path = "pallets/dynamic-evm-base-fee", default-features = false }

halo2_proofs = { git = "https://github.com/Cardinal-Cryptography/pse-halo2", branch = "aleph", default-features = false }

# Pallet
pallet-aleph = { path = "pallets/aleph", default-features = false }
pallet-aleph-runtime-api = { path = "pallets/aleph/aleph-runtime-api", default-features = false }
pallet-committee-management = { path = "pallets/committee-management", default-features = false }
pallet-elections = { path = "pallets/elections", default-features = false }

# crate
finality-aleph = { path = "crate/finality-aleph" }
rate-limiter = { path = "crate/rate-limiter" }
network-clique = { path = "crate/clique" }
client-runtime-api = { path = "crate/client-runtime-api", default-features = false }
selendra-runtime-interfaces = { path = "crate/runtime-interfaces", default-features = false }

# Selendra
selendra-runtime = { path = "runtime"}
selendra-primitives = { path = "primitives", default-features = false}
